--- a/style.css
+++ b/style.css
@@ -512,12 +512,14 @@ h2 {
     width: 30%;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
+/* testimonial */
 .testimonial img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     margin-top: 15px;
 }
+/* star */
 .star {
     color: gold;
     font-size: 24px;
