--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ li img{
     background-color: #ff8c00;
     color: white;
 }
+/* select */
 select {
     padding: 8px 22px;
     margin: 0 5px;
