--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ li img{
     width: 1440px;
     position: relative;
 }
-
+/* hero-section one more try  */
 .hero-section p{
     padding: 5% ;
     padding-left: 10%;
