--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ li img{
     font-family: Arial, sans-serif;
     padding: 30px;
     box-sizing: border-box;
+    
 }
 
 .banner-container p{
@@ -179,6 +180,7 @@ li img{
     font-size: 16px;
 
 }
+/* discount circle */
 .discount-circle {
     position: absolute;
     top: 20px;
@@ -208,7 +210,7 @@ li img{
     width: 50%;
     height: auto;
 }
-
+/* vehicle */
 .vehicle-type {
     display: flex;
 }
@@ -339,7 +341,7 @@ select {
 .service-type{
     color: #585858;
     font-size: 24px;
-    font-weight: 600;
+    font-weight: 600;   
 }
 
 /* WHY CHOOSE US */
@@ -361,6 +363,7 @@ select {
     position: relative;
     flex-wrap: wrap;
 }
+/*  main circle */
 
 .main-circle {
     
